Conclusão das funcionalidades ensinadas durante o evento

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -35,12 +35,13 @@
 }
 
 body {
+  overflow-y: hidden;
   background: var(--background);
   color: var(--text);
 }
 
 body, input, textarea, button {
-  font-family: 400 16px 'Inter', sans-serif ;
+  font: 400 16px 'Inter', sans-serif; ;
 }
 
 button {
@@ -52,4 +53,13 @@ a {
   text-decoration: none;
 }
 
+.container {
+  height: 100vh;
+  max-width: 992px;
+  margin: 0 auto;
+  padding: 2.5rem 2rem;
+
+  display: flex;
+  flex-direction: column;
+}
 
